--- a/app/src/main/res/layout/activity_mock_test.xml
+++ b/app/src/main/res/layout/activity_mock_test.xml
@@ -83,6 +83,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:text="RadioButton" />
+
     </RadioGroup>
 
     <Button
@@ -95,6 +96,18 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Take another test"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/question" />
 
     <Button
         android:id="@+id/previous_question"
